# trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  curation_pool.yml  main.py  pyproject.toml  tickers.yml
.claude/: settings.json  settings.local.json
data/: 1801.JP.parquet  1802.JP.parquet  1928.JP.parquet  2802.JP.parquet  2914.JP.parquet  4063.JP.parquet  4452.JP.parquet  4502.JP.parquet  4519.JP.parquet  4543.JP.parquet  4568.JP.parquet  4661.JP.parquet  4901.JP.parquet  6098.JP.parquet  6146.JP.parquet  6273.JP.parquet  6301.JP.parquet  6367.JP.parquet  6501.JP.parquet  6503.JP.parquet  6701.JP.parquet  6702.JP.parquet  6723.JP.parquet  6758.JP.parquet  6762.JP.parquet  6857.JP.parquet  6861.JP.parquet  6920.JP.parquet  6981.JP.parquet  7011.JP.parquet  7013.JP.parquet  7201.JP.parquet  7203.JP.parquet  7267.JP.parquet  7741.JP.parquet  7751.JP.parquet  7974.JP.parquet  8001.JP.parquet  8031.JP.parquet  8035.JP.parquet  (+16 more)
docs/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  backtest_report.json  cs_model_quality.json  dashboard_index.json  drift_report.json  feature_precompute_report.json  index.html  index.txt  model_quality.json  monthly_audit.json  performance.html  performance.txt  performance_detail.json  performance_summary.json  portfolio_backtest.json  portfolio_latest.json  portfolio_shadow_report.json  rotating_refresh_report.json  signal_outcomes_recent.json  state.json  stress_test_report.json  universe_refresh_report.json  weekly_retrain_report.json
migrations/: 0001_phase0_schema.sql  0002_phase1_quality_schema.sql  0003_phase2_portfolio_schema.sql
plans/: github-actions-frequency-design.md  portfolio-optimization-strategy.md  profitability-roadmap.md
reports/: weekly_2026-06-07.md  weekly_2026-06-13.md  weekly_2026-06-20.md  weekly_2026-06-27.md  weekly_latest.md
scripts/: backfill_state_signals.py  curation_common.py  curation_guard.py  curation_merge.py  curation_notify.py  curation_pool_merge.py  curation_pool_notify.py  curation_warmup.py  db_migrate.py  drift_check.py  feature_precompute.py  jpx_calendar.py  monthly_audit.py  portfolio_shadow_report.py  rotating_refresh.py  run_guard.py  settle_outcomes.py  stress_test.py  technical_screen.py  universe_refresh.py  universe_select.py  update_macro_snapshots.py  (+4 more)
(+1879 files in other folders)
