[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "python-dotenv>=1.1.0",
    "line-bot-sdk>=3.21.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "yfinance>=0.2.54",
    "psycopg[binary]>=3.2",
]

# Used by the run-ruff.sh PostToolUse hook (via `uvx ruff`); ruff itself is not
# a project dependency. Conservative defaults to keep auto-fix diffs small.
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# Default rule set (pyflakes F + pycodestyle E) only — no opinionated extras,
# so --fix mostly removes unused imports / trivial issues rather than churning.
select = ["E", "F"]
